k8s/server-deployment.yaml
# Build Deployment object (with pods) that use server image to create containers
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server
  template:
    # Define the pod object
    metadata:
      labels:
        component: server
    spec:
      # We need to list out the containers that will run within this pod
      containers:
        - name: web-server
          image: benyoo5222jae/multi-fib-server
          ports:
            - containerPort: 5000
