k8s/client-cluster-ip-service.yaml
# We are going to assign an Ip or cluster IP address to the client-deployment object (point to the object)
# First we create a service object; Then we use the sub type called Cluster IP
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: frontend
  ports:
    - port: 3000
      targetPort: 3000
